@@ -1,3 +1,9 @@
+2009-02-13  Gordon Williams  <gordon.williams@collabora.co.uk>
+	
+	* matchbox/core/mb-wm-decor.c
+	* matchbox/core/mb-wm-decor.h:
+	  Reverted previous (2009-02-12) changes as no longer required
+
 2009-02-12  Gordon Williams  <gordon.williams@collabora.co.uk>
 	
 	* matchbox/core/mb-wm-decor.c
